project( CompilerSpirV )

set( ${PROJECT_NAME}_VERSION_MAJOR 0 )
set( ${PROJECT_NAME}_VERSION_MINOR 1 )
set( ${PROJECT_NAME}_VERSION_BUILD 0 )
set( ${PROJECT_NAME}_VERSION_YEAR 2019 )

set( PROJECT_VERSION "${${PROJECT_NAME}_VERSION_MAJOR}.${${PROJECT_NAME}_VERSION_MINOR}" )
set( PROJECT_SOVERSION "${${PROJECT_NAME}_VERSION_BUILD}" )

set( INCLUDE_DIR ${SDW_SOURCE_DIR}/include/${PROJECT_NAME} )
set( SOURCE_DIR ${SDW_SOURCE_DIR}/source/${PROJECT_NAME} )

file( GLOB_RECURSE ${PROJECT_NAME}_FOLDER_HEADER_FILES
	${INCLUDE_DIR}/*.h
	${INCLUDE_DIR}/*.hpp
	${INCLUDE_DIR}/*.inl
)
file( GLOB_RECURSE ${PROJECT_NAME}_FOLDER_SOURCE_FILES
	${SOURCE_DIR}/*.h
	${SOURCE_DIR}/*.hpp
	${SOURCE_DIR}/*.inl
	${SOURCE_DIR}/*.c
	${SOURCE_DIR}/*.cpp
)
parse_subdir_files( ${SDW_SOURCE_DIR} ${PROJECT_NAME}/spirv "spirv" )

add_library( ${PROJECT_NAME}
	SHARED
	${${PROJECT_NAME}_FOLDER_HEADER_FILES}
	${${PROJECT_NAME}_FOLDER_SOURCE_FILES}
	${${PROJECT_NAME}_FOLDER_SCRIPT_FILES}
)
add_library( sdw::${PROJECT_NAME}
	ALIAS
	${PROJECT_NAME}
)
target_compile_options( ${PROJECT_NAME} PRIVATE
	-D${PROJECT_NAME}_Exports
)
target_link_libraries( ${PROJECT_NAME} PUBLIC
	sdw::ShaderAST
	sdw::ShaderWriter
)
set_target_properties( ${PROJECT_NAME}
	PROPERTIES
		VERSION ${PROJECT_VERSION}
		SOVERSION ${PROJECT_SOVERSION}
		CXX_STANDARD 17
		FOLDER "Compilers"
)
target_include_directories( ${PROJECT_NAME} PRIVATE
	${SDW_SOURCE_DIR}/source
	${INCLUDE_DIR}
	${SOURCE_DIR}
)

# We install headers to <install_dir>/include/${PROJECT_NAME}
target_install_headers( ${PROJECT_NAME} ${SDW_SOURCE_DIR}/include/${PROJECT_NAME} )

set( SDW_EXPORTERS_LIST
	${SDW_EXPORTERS_LIST}
	${PROJECT_NAME}
	PARENT_SCOPE
)

set( SDW_EXPORTERS_DEFINITIONS
	${SDW_EXPORTERS_DEFINITIONS}
	SDW_Has${PROJECT_NAME}=1
	PARENT_SCOPE
)
